@@ -14,6 +14,7 @@ mkdir ${dest}/engines/gforth
 mkdir ${dest}/engines/bigforth
 mkdir ${dest}/engines/pfe
 mkdir ${dest}/engines/Win32Forth
+mkdir ${dest}/engines/fina
 
 cp AUTHORS COPYING NEWS README ChangeLog ${dest}
 cp       ffl/*.fs   ${dest}/ffl
@@ -24,6 +25,7 @@ cp   engines/gforth/*.fs      ${dest}/engines/gforth
 cp   engines/bigforth/*.fs    ${dest}/engines/bigforth
 cp   engines/pfe/*.fs         ${dest}/engines/pfe
 cp   engines/Win32Forth/*.fs  ${dest}/engines/Win32Forth
+cp   engines/fina/*.fs        ${dest}/engines/fina
 
 tar cvzf ${package}-${version}.tar.gz ${dest} 
 
